# sample-go-and-elm

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod
.github/workflows/: build.yaml
cmd/: BUILD.bazel  main.go
front/: BUILD.bazel  embed.go
